--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "User ID=postgres;Password=123; Host=localhost; Port=5433; Database=postgres"
+    "Default": "Server=localhost;Database=hero;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
