HangFire and Redis Implementation

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,24 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=localhost;Database=hero;Trusted_Connection=true;TrustServerCertificate=true;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "Default": "Server=localhost;Database=hero;Trusted_Connection=true;TrustServerCertificate=true;"
+    },
+    "Redis": {
+        "connection": "localhost:6379"
+    },
+
+    "Metadata": {
+        "heroes":  "allheroes"
+    },
+
+    "Intervals": {
+        "IHeroesUpdate": "0 * * * *"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
