--- a/appsettings.json
+++ b/appsettings.json
@@ -1,24 +1,39 @@
 {
-    "ConnectionStrings": {
-        "Default": "Server=localhost;Database=hero;Trusted_Connection=true;TrustServerCertificate=true;"
-    },
-    "Redis": {
-        "connection": "localhost:5002"
-    },
 
-    "Metadata": {
-        "heroes":  "allheroes"
-    },
+  //"AllowedOrigins": [
+  //  "http://localhost:3000",
+  //  "http://127.0.0.1:5500
+  //],
 
-    "Intervals": {
-        "IHeroesUpdate": "0 * * * *"
-    },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=hero;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
+  "Redis": {
+    "connection": "localhost:6379"
+  },
 
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Metadata": {
+    "heroes": "allheroes"
+  },
+
+  "Intervals": {
+    "IHeroesUpdate": "0 * * * *",
+    "IHeroNotification": "* */1 * * *"
+  },
+
+  "RabbitMQ": {
+    "host": "localhost",
+    "port": 5672,
+    "user": "guest",
+    "password": "guest"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+
+  "AllowedHosts": "*"
 }
