--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,8 @@
 {
 
-  //"AllowedOrigins": [
-  //  "http://localhost:3000",
-  //  "http://127.0.0.1:5500
-  //],
+  "AllowedOrigins": [
+    "http://localhost:3000"
+  ],
 
   "ConnectionStrings": {
     "Default": "Server=localhost;Database=hero;Trusted_Connection=true;TrustServerCertificate=true;"
